--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <header>
@@ -29,16 +30,16 @@
 
     <section class="block block--dark block--skewed-left hero">
         <div class="container grid grid--1x2">
-            <header class="block__header hero__content">
+            <header class="block__header hero__content" data-aos="fade-right">
                 <h1 class="block__heading">Cloud Hosting for Pros</h1>
                 <p class="hero__tagline">Deploy your websites in less than 60 seconds.</p>
                 <a href="" class="btn btn--accent btn--stretched">Get Started</a>
             </header>
-            <img class="hero__image" src="images/banner.png" alt="">
+            <img class="hero__image" data-aos="zoom-in" src="images/banner.png" alt="">
         </div>
     </section>
 
-    <section class="block container block-domain">
+    <section class="block container block-domain" data-aos="fade-up">
         <header class="block__header">
             <h2>Starting at $9 per month</h2>
             <p>
@@ -66,7 +67,7 @@
 
     <section class="block container block-plans">
         <div class="grid grid--1x3 ">
-            <div class="plan">
+            <div class="plan" data-aos="fade-up">
                 <div class="card card--secondary">
                     <header class="card__header">
                         <h3 class="plan__name">Entry</h3>
@@ -86,7 +87,7 @@
                     </div>
                 </div>
             </div>
-            <div class="plan plan--popular">
+            <div class="plan plan--popular" data-aos="fade-up">
                 <div class="card card--primary">
                     <header class="card__header">
                         <h3 class="plan__name">Entry</h3>
@@ -106,7 +107,7 @@
                     </div>
                 </div>
             </div>
-            <div class="plan">
+            <div class="plan" data-aos="fade-up">
                 <div class="card card--secondary">
                     <header class="card__header">
                         <h3 class="plan__name">Entry</h3>
@@ -130,14 +131,14 @@
     </section>
 
     <section class="block container">
-        <header class="block__header">
+        <header class="block__header" data-aos="zoom-in">
             <h2>Host on the Cloud to Keep Growing.</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, corporis!
         </p>
         </header>
         <article class="grid grid--1x2 feature">
-            <div class="feature__content">
+            <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
                         <use xlink:href="images/sprite.svg#easy"></use>
@@ -149,7 +150,7 @@
                 </p>
                 <a href="" class="link-arrow">Learn More</a>
             </div>
-            <picture>
+            <picture data-aos="zoom-in">
                 <source
                     type="image/webp"
                     srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
@@ -161,7 +162,7 @@
                 <img class="feature__image" src="images/easy@2x.jpg" alt="">
             </picture>
         </article>
-        <article class="grid grid--1x2 feature">
+        <article class="grid grid--1x2 feature" data-aos="fade-left">
             <div class="feature__content">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
@@ -174,7 +175,7 @@
                 </p>
                 <a href="" class="link-arrow">Learn More</a>
             </div>
-            <picture>
+            <picture data-aos="zoom-in">
                 <source
                  type="image/webp"
                      srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
@@ -186,7 +187,7 @@
                  <img class="feature__image" src="images/easy@2x.jpg" alt="">
             </picture>
         </article>
-        <article class="grid grid--1x2 feature">
+        <article class="grid grid--1x2 feature" data-aos="fade-right">
             <div class="feature__content">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
@@ -199,7 +200,7 @@
                    </p>
                    <a href="" class="link-arrow">Learn More</a>
             </div>
-            <picture>
+            <picture data-aos="zoom-in">
                 <source
                 type="image/webp"
                 srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
@@ -218,7 +219,7 @@
           <h2>User-friendly Control Panel</h2>
         </header>
         <div class="container grid grid--1x2">
-          <picture class="block-showcase__image">
+          <picture class="block-showcase__image" data-aos="fade-right">
             <source
               type="image/webp"
               srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x"
@@ -229,7 +230,7 @@
             />
             <img src="images/ipad.png" alt="" />
           </picture>
-          <ul class="list">
+          <ul class="list" data-aos="fade-up">
             <li>
               <div class="media">
                 <div class="media__image">
@@ -286,13 +287,13 @@
     </section>
           
     <section class="block">
-        <header class="block__header">
+        <header class="block__header" data-aos="zoom-in">
             <h2>What our Customers are Saying</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic fuga quo eius voluptatem commodi temporibus rem ea harum distinctio fugit?
             </p>
         </header>
-        <div class="container">
+        <div class="container" data-aos="zoom-in">
            <div class="card testimonial">
                <div class="grid grid--1x2">
                     <div class="testimonial__image" >
@@ -403,5 +404,9 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html> 
