Validation of HTML & CSS code.

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 Search
             </button>
         </div> 
-        <ui class="list block-domain__prices">
+        <ul class="list block-domain__prices">
             <li><span class="badge badge--secondary">.com $9</span></li>
             <li>.sg $10</li>
             <li>.space $11</li>
             <li>.info $14</li>
             <li>.net $10</li>
             <li>.xyz $10</li>
-        </ui>
+        </ul>
     </section>
 
     <section class="block container block-plans">
@@ -346,10 +346,10 @@
       <footer class="block block--dark footer">
         <div class="container grid footer__sections">
             <section class="collapsible collapsible--expanded footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                   <h2 class="collapsible__heading footer__heading">Products</h2>
                   <img src="images/chevron.svg" class="icon icon--white collapsible__chevron" alt="">
-                </header>
+                </div>
                 <div class="collapsible__content">
                   <ul class="list">
                       <li><a href="#">Website Hosting</a></li>
@@ -359,10 +359,10 @@
                 </div>
             </section>
             <section class="collapsible footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                   <h2 class="collapsible__heading footer__heading">Company</h2>
                   <img src="images/chevron.svg" class="icon icon--white collapsible__chevron" alt="">
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="#">About</a></li>
@@ -372,10 +372,10 @@
                 </div>
             </section>
             <section class="collapsible footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                   <h2 class="collapsible__heading footer__heading">Support</h2>
                   <img src="images/chevron.svg" class="icon icon--white collapsible__chevron" alt="">
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="#">Contact</a></li>
@@ -385,10 +385,10 @@
                 </div>
             </section>
             <section class="collapsible footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                   <h2 class="collapsible__heading footer__heading">Domains</h2>
                   <img src="images/chevron.svg" class="icon icon--white collapsible__chevron" alt="">
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="#">Domain Checker</a></li>
@@ -397,10 +397,10 @@
                     </ul>
                 </div>
             </section>
-            <section class="footer__brand">
+            <div class="footer__brand">
                 <img src="images/logo.svg" alt="">
                 <p class="footer__copyright">Copyright 2022 Ronak Jesadiya</p>
-            </section>
+            </div>
         </div>
     </footer>
     <script src="js/main.js"></script>
